# best-practices-mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  IMPROVEMENTS.md  Makefile  PLAN.md  README.md  RECOMMEND_IMPROVEMENTS.md  Session.vim  TEAM_SETUP.md  TESTING.md  build_index.py  chat-gpt-convo.md  check_remaining.sh  cross-account-user-policy.json  docker-compose.yml  ecr-cross-account-policy.json  ecr-template.yaml  fix_headers.sh  fix_headers_v2.sh  fix_lists.sh  fix_markdown.sh  fix_trailing_spaces.sh  improved_chunking.py  mcp-config-example.json  mcp_search.py  proof_test.sh  push-to-public-ecr.sh  pyproject.toml  q.json  requirements.txt  run-awskb-mcp.sh  run-local-mcp.sh  run.sh  search.sh  server.py  setup-cross-account.sh  setup-env.sh  setup-org-access.sh  simple_test.sh  (+4 more)
aws_kb/: .gitignore  CODE_REVIEW.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  pyproject.toml  run.sh  server.py
docs/: AWS_BEST_PRACTICES.md  DATABASE_BEST_PRACTICES.md  DOTNET_BEST_PRACTICES.md  PYTHON_BEST_PRACTICES.md  SDLC_ADVICE.md  UI_BEST_PRACTICES.md
docs.old/: 01-development-environment-setup.md  02-code-quality-standards.md  03-security-best-practices.md  04-testing-strategies.md  05-cicd-pipelines.md  06-deployment-infrastructure.md  07-monitoring-logging.md  08-performance-optimization.md  09-documentation-maintenance.md  README.md
iam-policies/: ecr-org-policy.json  ecr-policy.json  org-user-policy.json
src_mcp/: Dockerfile.fixed  build_index.py  docker-compose.yml  mcp_search.py  quick_test.py  requirements.txt  server.py  test.sh  test_local.py  test_mcp.py  (+3 more)
(+26 files in other folders)
