[project]
name = "best-practices-mcp"
version = "0.1.0"
description = "SDLC Best Practices MCP Server"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.2.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "duckdb>=0.9.0",
    "numpy>=1.24.0",
]

[project.scripts]
best-practices-mcp-server = "sdlc_mcp.server:main"
best-practices-mcp-build = "sdlc_mcp.build_index:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "PL", "RUF"]
ignore = ["PLR0913", "PLR0912"]  # Too many arguments/branches

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --maxfail=1 --disable-warnings -x"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
